--- a/package.json
+++ b/package.json
@@ -7,17 +7,25 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.18.3",
+    "connect-redis": "^3.3.3",
     "continuation-local-storage": "^3.2.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^6.0.0",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.4.3",
+    "redis": "^2.8.0",
     "rx": "^4.1.0",
     "sequelize": "^4.38.0",
-    "multer": "^1.3.1"
+    "socket.io-redis": "^5.2.0"
   }
 }
