--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jasmine & jasmine-node --verbose spec/api --forceexit --captureExceptions"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -27,5 +28,10 @@
     "rx": "^4.1.0",
     "sequelize": "^4.38.0",
     "socket.io-redis": "^5.2.0"
+  },
+  "devDependencies": {
+    "jasmine": "^3.1.0",
+    "jasmine-node": "^1.15.0",
+    "jasmine-spec-reporter": "^4.2.1"
   }
 }
