--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
+    "cls-hooked": "^4.2.2",
     "connect-redis": "^3.3.3",
     "continuation-local-storage": "^3.2.1",
     "cookie-parser": "~1.4.3",
