--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "set NODE_ENV=test & node ./bin/www & jasmine-node --verbose spec --forceexit --captureExceptions"
   },
   "dependencies": {
+    "async-lock": "^1.1.3",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
