--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "moment": "^2.22.2",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
     "passport": "^0.4.0",
