--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.4.3",
+    "portfinder": "^1.0.15",
     "redis": "^2.8.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
