--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "server_test": "set NODE_ENV=test & node ./bin/www",
-    "test": "jasmine-node --verbose spec --forceexit --captureExceptions"
+    "test": "set NODE_ENV=test & jasmine-node --verbose spec --forceexit --captureExceptions"
   },
   "dependencies": {
     "async-lock": "^1.1.3",
